--- a/feed/index.html
+++ b/feed/index.html
@@ -9,13 +9,13 @@
   <meta name="author" content="Jamison Lahman">
   <link rel="stylesheet" href="/css/stylesheet.css">
   <link rel="icon" type="image/x-icon" href="./images/jme.ico">
-  <title>Home | Jamison Lahman</title>
+  <title>Jamison Lahman</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap">
 </head>
-<body>
+<body class="container">
 <header id="title-block-header">
   <nav>
     <div id="branding">
@@ -24,7 +24,7 @@
       <a href="/resume" title="Jamison's Resume">Resume</a>
       <a href="/feed" title="Reverse blog">Feed</a>
     </div>
-    <div class="right">
+    <div class="header-right">
       <a href="mailto:jamison@lahman.dev" title="Email"><i class="fas fa-envelope"></i></a>
       <a href="https://x.com/jmelahman" title="Twitter"><i class="fas fa-twitter"></i></a>
       <a href="https://github.com/jmelahman" title="GitHub"><i class="fas fa-github"></i></a>
@@ -33,6 +33,9 @@
     </div>
   </nav>
 </header>
-<h1 id="jamison-lahman">Jamison Lahman</h1>
+<h1 id="combined-rss-feed">Combined RSS Feed</h1>
+<div id="feed">
+Loading...
+</div>
 </body>
 </html>
