make it not completely broken

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Personal website">
   <meta name="keywords" content="jamison,jamie,lahman">
   <meta name="author" content="Jamison Lahman">
-  <link rel="stylesheet" href="/css/stylesheet.css">
-  <link rel="icon" type="image/x-icon" href="./images/jme.ico">
+  <link rel="stylesheet" href="/css/stylesheet.minified.css">
+  <link rel="icon" type="image/x-icon" href="/images/jme.ico">
   <title>Home | Jamison Lahman</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,12 +18,10 @@
 <body>
 <header id="title-block-header">
   <nav>
-    <div id="branding">
-      <a href="/" title="Return to the home page">About</a>
-      <a href="/blog" title="Personal blog">Blog</a>
-      <a href="/resume" title="Jamison's Resume">Resume</a>
-      <a href="/feed" title="Reverse blog">Feed</a>
-    </div>
+    <a href="/" title="Return to the home page">About</a>
+    <a href="/blog" title="Personal blog">Blog</a>
+    <a href="/resume" title="Jamison's Resume">Resume</a>
+    <a href="/feed" title="Reverse blog">Feed</a>
     <div class="right">
       <a href="mailto:jamison@lahman.dev" title="Email"><i class="fas fa-envelope"></i></a>
       <a href="https://x.com/jmelahman" title="Twitter"><i class="fas fa-twitter"></i></a>
