--- a/feed/index.html
+++ b/feed/index.html
@@ -7,24 +7,22 @@
   <meta name="description" content="Personal website">
   <meta name="keywords" content="jamison,jamie,lahman">
   <meta name="author" content="Jamison Lahman">
-  <link rel="stylesheet" href="/css/stylesheet.css">
-  <link rel="icon" type="image/x-icon" href="./images/jme.ico">
+  <link rel="stylesheet" href="/css/stylesheet.minified.css">
+  <link rel="icon" type="image/x-icon" href="/images/jme.ico">
   <title>Jamison Lahman</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap">
 </head>
-<body class="container">
+<body>
 <header id="title-block-header">
   <nav>
-    <div id="branding">
-      <a href="/" title="Return to the home page">About</a>
-      <a href="/blog" title="Personal blog">Blog</a>
-      <a href="/resume" title="Jamison's Resume">Resume</a>
-      <a href="/feed" title="Reverse blog">Feed</a>
-    </div>
-    <div class="header-right">
+    <a href="/" title="Return to the home page">About</a>
+    <a href="/blog" title="Personal blog">Blog</a>
+    <a href="/resume" title="Jamison's Resume">Resume</a>
+    <a href="/feed" title="Reverse blog">Feed</a>
+    <div class="right">
       <a href="mailto:jamison@lahman.dev" title="Email"><i class="fas fa-envelope"></i></a>
       <a href="https://x.com/jmelahman" title="Twitter"><i class="fas fa-twitter"></i></a>
       <a href="https://github.com/jmelahman" title="GitHub"><i class="fas fa-github"></i></a>
