add back about interests

--- a/index.html
+++ b/index.html
@@ -32,5 +32,343 @@
   </nav>
 </header>
 <h1 id="jamison-lahman">Jamison Lahman</h1>
+<p>Below my are inferred interests by Twitter. Aside from the collection
+of politicians I’ve never heard of, it’s fairly accurate.</p>
+<ul>
+<li>5G</li>
+<li>92.3 The Fan</li>
+<li>AP</li>
+<li>Abraham Lincoln</li>
+<li>Action and adventure books</li>
+<li>Adam Schiff</li>
+<li>Advertising</li>
+<li>Alex Jones</li>
+<li>Alexandria Ocasio-Cortez</li>
+<li>Amazon</li>
+<li>Amy Klobuchar</li>
+<li>Andrew McCabe</li>
+<li>Andrew Yang</li>
+<li>Android</li>
+<li>Animated films</li>
+<li>Animation</li>
+<li>Anime</li>
+<li>Anthony Jeselnik</li>
+<li>Apple</li>
+<li>Asha Rangappa</li>
+<li>Astrology</li>
+<li>Austin Carr</li>
+<li>B2B</li>
+<li>BBC</li>
+<li>BBC News</li>
+<li>BBC News at Ten</li>
+<li>BLACKPINK</li>
+<li>Bakari Sellers</li>
+<li>Barack Obama</li>
+<li>Baseball</li>
+<li>Basketball</li>
+<li>Basketball</li>
+<li>Battlefield</li>
+<li>Beauty</li>
+<li>Bed and breakfasts</li>
+<li>Ben Shapiro</li>
+<li>Bernie Sanders</li>
+<li>Bill Gates</li>
+<li>Bill Kristol</li>
+<li>Bill Mitchell</li>
+<li>Bill Nye</li>
+<li>Books</li>
+<li>Books</li>
+<li>Boris Johnson</li>
+<li>Breakfast</li>
+<li>Brett Kavanaugh</li>
+<li>Business &amp; finance</li>
+<li>Business Leaders</li>
+<li>Business news and general info</li>
+<li>BuzzFeed</li>
+<li>CBS</li>
+<li>CNN</li>
+<li>COVID-19</li>
+<li>COVID-19: government and public officials</li>
+<li>Carlo Ancelotti</li>
+<li>Cartoon +</li>
+<li>Celebrities</li>
+<li>Celebrity</li>
+<li>Charlie Kirk</li>
+<li>Charlie Penguinz0</li>
+<li>Chester Bennington</li>
+<li>Chinese cuisine</li>
+<li>Chris Hayes</li>
+<li>Christopher Wray</li>
+<li>Cleveland Browns</li>
+<li>Cleveland Cavaliers</li>
+<li>Click</li>
+<li>Cloud computing</li>
+<li>Cloud gaming</li>
+<li>Coca-Cola</li>
+<li>Coffee</li>
+<li>Coffee</li>
+<li>College life</li>
+<li>Combat sports</li>
+<li>Comedians</li>
+<li>Comedy</li>
+<li>Commentary</li>
+<li>Computer programming</li>
+<li>Cooking</li>
+<li>Cuisines</li>
+<li>Cybersecurity</li>
+<li>DIY &amp; Home</li>
+<li>Daft Punk</li>
+<li>Dan Bongino</li>
+<li>Dance music</li>
+<li>Dave Chappelle</li>
+<li>Dave Weigel</li>
+<li>David Brooks</li>
+<li>David Corn</li>
+<li>David Frum</li>
+<li>Dell</li>
+<li>Digital Ocean</li>
+<li>Digital creators and channels</li>
+<li>Discord</li>
+<li>Dogs</li>
+<li>Donald Trump</li>
+<li>Donald Trump Jr.</li>
+<li>Drink Experience</li>
+<li>Economic Issues in the United States</li>
+<li>Education</li>
+<li>Education System in the United States</li>
+<li>Education news and general info</li>
+<li>Electronic music</li>
+<li>Elizabeth Warren</li>
+<li>Elon Musk</li>
+<li>Entertainment</li>
+<li>Epic Games</li>
+<li>Eric Andre</li>
+<li>Eric André</li>
+<li>Eric Boehlert</li>
+<li>Eric Swalwell</li>
+<li>Experimental music</li>
+<li>Facebook</li>
+<li>Family and parenting</li>
+<li>Fantasy sports</li>
+<li>Fashion</li>
+<li>Fast food</li>
+<li>Fear The Sword</li>
+<li>Federal Bureau of Investigation</li>
+<li>Feminism</li>
+<li>Financial news</li>
+<li>Firefox</li>
+<li>Food</li>
+<li>Food</li>
+<li>Food experience</li>
+<li>Fox News</li>
+<li>French Fries</li>
+<li>Front-End Programming</li>
+<li>Funny Accounts</li>
+<li>Game developers and publishers</li>
+<li>Game of Thrones</li>
+<li>Games</li>
+<li>Gaming</li>
+<li>Gavin Newsom</li>
+<li>Geography</li>
+<li>George Conway</li>
+<li>George W. Bush</li>
+<li>GitHub</li>
+<li>Glenn Greenwald</li>
+<li>Global Economy</li>
+<li>Google</li>
+<li>Government</li>
+<li>Government officials and agencies</li>
+<li>Grimes</li>
+<li>Hillary Clinton</li>
+<li>Hip-hop &amp; rap</li>
+<li>Hobbies and interests</li>
+<li>Hope Hicks</li>
+<li>Ilhan Omar</li>
+<li>Information security</li>
+<li>Instagram</li>
+<li>Jack Conklin</li>
+<li>Jack Dorsey</li>
+<li>James Clapper</li>
+<li>James Comey</li>
+<li>James Woods</li>
+<li>Jared Kushner</li>
+<li>Jeopardy!</li>
+<li>Jim Jordan</li>
+<li>Job Growth in the United States</li>
+<li>Joe Biden</li>
+<li>John Ratcliffe</li>
+<li>John Roberts</li>
+<li>Joni Ernst</li>
+<li>Jordan</li>
+<li>Journalists</li>
+<li>Joy Reid</li>
+<li>Justin Trudeau</li>
+<li>K-pop</li>
+<li>Kamala Harris</li>
+<li>Kanye West</li>
+<li>Kevin Stefanski</li>
+<li>Kurt Cobain</li>
+<li>Kyle Griffin</li>
+<li>LEGO</li>
+<li>La reine des neiges</li>
+<li>Laura Ingraham</li>
+<li>Laurence Tribe</li>
+<li>Leadership</li>
+<li>League of Legends</li>
+<li>Lee Zeldin</li>
+<li>Legalized Marijuana</li>
+<li>Linux</li>
+<li>Linux</li>
+<li>Live: NBA Basketball</li>
+<li>Live: The Masters PGA Tour Golf</li>
+<li>Luka Doncic</li>
+<li>MMA</li>
+<li>MTV</li>
+<li>Machine learning</li>
+<li>Mark R. Levin</li>
+<li>McDonald’s</li>
+<li>Michael Flynn</li>
+<li>Michael Tracey</li>
+<li>Mick Mulvaney</li>
+<li>Microsoft</li>
+<li>Microsoft Windows</li>
+<li>Mike Pence</li>
+<li>Milk</li>
+<li>Minecraft</li>
+<li>Mitch McConnell</li>
+<li>Movies</li>
+<li>Music</li>
+<li>Music</li>
+<li>NBA</li>
+<li>NBA Basketball</li>
+<li>NBA Basketball</li>
+<li>NFL Football</li>
+<li>Nails</li>
+<li>Nancy Pelosi</li>
+<li>Natasha Bertrand</li>
+<li>Nate Silver</li>
+<li>National parks</li>
+<li>Neal Katyal</li>
+<li>Neil deGrasse Tyson</li>
+<li>Netflix</li>
+<li>New Years Resolutions</li>
+<li>News</li>
+<li>News Outlets</li>
+<li>Nicholas Kristof</li>
+<li>Nick Kroll</li>
+<li>Nike</li>
+<li>Online education</li>
+<li>Open source</li>
+<li>Os Simpsons</li>
+<li>Overwatch</li>
+<li>Pasta</li>
+<li>Paul Krugman</li>
+<li>Paul Manafort</li>
+<li>Pete Buttigieg</li>
+<li>Peter Strzok</li>
+<li>Pharma</li>
+<li>Philip Rucker</li>
+<li>Physics</li>
+<li>Physics</li>
+<li>Pixelated Boat</li>
+<li>Pod Save America</li>
+<li>Podcasts</li>
+<li>Political Body</li>
+<li>Political Issues</li>
+<li>Political News</li>
+<li>Political figures</li>
+<li>Politics</li>
+<li>Politics</li>
+<li>Popular franchises</li>
+<li>Potato</li>
+<li>Preet Bharara</li>
+<li>Rachel Maddow</li>
+<li>Retail</li>
+<li>Reuters</li>
+<li>Richard Burr</li>
+<li>Rick Wilson</li>
+<li>Ro Khanna</li>
+<li>Robert Mueller</li>
+<li>Robert Reich</li>
+<li>Roblox</li>
+<li>Rock</li>
+<li>Roger Stone</li>
+<li>Ronna McDaniel</li>
+<li>Rudy Giuliani</li>
+<li>Ryan Fournier</li>
+<li>Sahil Kapur</li>
+<li>Sara A. Carter</li>
+<li>Sarah Huckabee Sanders</li>
+<li>Science</li>
+<li>Science</li>
+<li>Science</li>
+<li>Science News</li>
+<li>Science News</li>
+<li>Science news</li>
+<li>Sean Davis</li>
+<li>Sexual Misconduct in the U.S.</li>
+<li>Skateboarding</li>
+<li>Soccer</li>
+<li>Social Media</li>
+<li>Space News</li>
+<li>Space and astronomy</li>
+<li>Space and astronomy</li>
+<li>SpaceX</li>
+<li>Sporting events</li>
+<li>Sports</li>
+<li>Sports Betting</li>
+<li>Sports news</li>
+<li>Star Wars</li>
+<li>Stephen Miller</li>
+<li>Stephen Punwasi</li>
+<li>Steve Mnuchin</li>
+<li>Steve Scalise</li>
+<li>Street art</li>
+<li>Supreme Court of the United States</li>
+<li>T-Mobile</li>
+<li>Tech news</li>
+<li>Technology</li>
+<li>Technology</li>
+<li>Technology Brands</li>
+<li>Ted Cruz</li>
+<li>Ted Lieu</li>
+<li>The Agenda</li>
+<li>The Home Depot</li>
+<li>The Legend of Zelda</li>
+<li>The New York Times</li>
+<li>The Simpsons</li>
+<li>The Simpsons</li>
+<li>The Washington Post</li>
+<li>The White House</li>
+<li>Travis Scott</li>
+<li>Tucker Carlson</li>
+<li>Tulsi Gabbard</li>
+<li>Twitch</li>
+<li>Twitter</li>
+<li>US Central Intelligence Agency</li>
+<li>US Politics</li>
+<li>US national news</li>
+<li>UX and Web Design</li>
+<li>United States Congress</li>
+<li>United States Foreign Policy</li>
+<li>United States Postal Service</li>
+<li>United States Senate</li>
+<li>United States Tax Reform</li>
+<li>Video game platforms and hardware</li>
+<li>Video games</li>
+<li>Visual arts</li>
+<li>Vladimir Putin</li>
+<li>Walmart</li>
+<li>Walter Shaub</li>
+<li>Watches</li>
+<li>Water</li>
+<li>Weather</li>
+<li>Weather</li>
+<li>Web Development</li>
+<li>Web development</li>
+<li>William Barr</li>
+<li>Yahoo!</li>
+<li>YouTube</li>
+</ul>
 </body>
 </html>
