--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
     </div>
   </nav>
 </header>
+<hr>
 <h1 id="jamison-lahman">Jamison Lahman</h1>
+<div class="right-sidebar">
+<figure>
+<img src="/images/psyduck_son.jpg"
+alt="Psyduck is my favorite Pokémon." />
+<figcaption aria-hidden="true">Psyduck is my favorite
+Pokémon.</figcaption>
+</figure>
+</div>
 <p>Below my are inferred interests by Twitter. Aside from the collection
 of politicians I’ve never heard of, it’s fairly accurate.</p>
 <ul>
