--- a/feed/index.html
+++ b/feed/index.html
@@ -14,6 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap">
+  <script src="/scripts/feed.js"></script>
 </head>
 <body>
 <header id="title-block-header">
@@ -32,9 +33,8 @@
   </nav>
 </header>
 <hr>
-<h1 id="combined-rss-feed">Combined RSS Feed</h1>
-<div id="feed">
-Loading...
+<div id="content">
+
 </div>
 </body>
 </html>
