title-prefix for Feed

--- a/feed/index.html
+++ b/feed/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Jamison Lahman">
   <link rel="stylesheet" href="/css/stylesheet.minified.css">
   <link rel="icon" type="image/x-icon" href="/images/jme.ico">
-  <title>Jamison Lahman</title>
+  <title>Feed | Jamison Lahman</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
