--- a/feed/index.html
+++ b/feed/index.html
@@ -19,10 +19,10 @@
 <body>
 <header id="title-block-header">
   <nav>
-    <a href="/" title="Return to the home page">About</a>
-    <a href="/blog" title="Personal blog">Blog</a>
+    <a href="/" class="" title="Return to the home page">About</a>
+    <a href="/blog" class="" title="Personal blog">Blog</a>
     <a href="/resume" title="Jamison's Resume">Resume</a>
-    <a href="/feed" title="Reverse blog">Feed</a>
+    <a href="/feed" class="active" title="Reverse blog">Feed</a>
     <div class="right">
       <a href="mailto:jamison@lahman.dev" title="Email"><i class="fas fa-envelope"></i></a>
       <a href="https://x.com/jmelahman" title="Twitter"><i class="fas fa-twitter"></i></a>
