--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Jamison Lahman">
   <link rel="stylesheet" href="/css/stylesheet.minified.css">
   <link rel="icon" type="image/x-icon" href="/images/jme.ico">
-  <title>Home | Jamison Lahman</title>
+  <title>About | Jamison Lahman</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -18,10 +18,10 @@
 <body>
 <header id="title-block-header">
   <nav>
-    <a href="/" title="Return to the home page">About</a>
-    <a href="/blog" title="Personal blog">Blog</a>
+    <a href="/" class="active" title="Return to the home page">About</a>
+    <a href="/blog" class="" title="Personal blog">Blog</a>
     <a href="/resume" title="Jamison's Resume">Resume</a>
-    <a href="/feed" title="Reverse blog">Feed</a>
+    <a href="/feed" class="" title="Reverse blog">Feed</a>
     <div class="right">
       <a href="mailto:jamison@lahman.dev" title="Email"><i class="fas fa-envelope"></i></a>
       <a href="https://x.com/jmelahman" title="Twitter"><i class="fas fa-twitter"></i></a>
