--- a/template.html
+++ b/template.html
@@ -36,10 +36,10 @@ $include-before$
 $endfor$
 <header id="title-block-header">
   <nav>
-    <a href="/" title="Return to the home page">About</a>
-    <a href="/blog" title="Personal blog">Blog</a>
+    <a href="/" class="$if(nav_about)$active$endif$" title="Return to the home page">About</a>
+    <a href="/blog" class="$if(nav_blog)$active$endif$" title="Personal blog">Blog</a>
     <a href="/resume" title="Jamison's Resume">Resume</a>
-    <a href="/feed" title="Reverse blog">Feed</a>
+    <a href="/feed" class="$if(nav_feed)$active$endif$" title="Reverse blog">Feed</a>
     <div class="right">
       <a href="mailto:jamison@lahman.dev" title="Email"><i class="fas fa-envelope"></i></a>
       <a href="https://x.com/jmelahman" title="Twitter"><i class="fas fa-twitter"></i></a>
