--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>About | Jamison Lahman</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap">
 </head>
 <body>
@@ -24,9 +24,9 @@
     <a href="/feed" class="" title="Reverse blog">Feed</a>
     <div class="right">
       <a href="mailto:jamison@lahman.dev" title="Email"><i class="fas fa-envelope"></i></a>
-      <a href="https://x.com/jmelahman" title="Twitter"><i class="fas fa-twitter"></i></a>
-      <a href="https://github.com/jmelahman" title="GitHub"><i class="fas fa-github"></i></a>
-      <a href="https://linkedin.com/in/jamison-lahman" title="LinkedIn"><i class="fas fa-linkedin"></i></a>
+      <a href="https://x.com/jmelahman" title="Twitter"><i class="fab fa-twitter"></i></a>
+      <a href="https://github.com/jmelahman" title="GitHub"><i class="fab fa-github"></i></a>
+      <a href="https://linkedin.com/in/jamison-lahman" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
       <a href="/rss.xml"><i class="fas fa-rss"></i> RSS</a>
     </div>
   </nav>
