--- a/404.html
+++ b/404.html
@@ -32,7 +32,8 @@
   </nav>
 </header>
 <hr>
-<h1 id="page-not-found">404 - Page Not Found</h1>
-<p>The page you are looking for does not exist.</p>
+<section id="page-not-found" style="text-align: center">
+<h1>404 - Page Not Found</h1>
+</section>
 </body>
 </html>
