--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap">
 </head>
 <body>
 <header id="title-block-header">
   <nav>
     <a href="/" class="active" title="Return to the home page">About</a>
-    <a href="/blog" class="" title="Personal blog">Blog</a>
     <a href="/resume" title="Jamison's Resume">Resume</a>
+    <a href="/blog" class="" title="Personal blog">Blog</a>
     <a href="/feed" class="" title="Reverse blog">Feed</a>
     <div class="right">
       <a href="mailto:jamison@lahman.dev" title="Email"><i class="fas fa-envelope"></i></a>
