--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="jamison,jamie,lahman">
   <meta name="author" content="Jamison Lahman">
   <link rel="stylesheet" href="/css/stylesheet.minified.css">
+  <link rel="stylesheet" href="/css/kate.css">
   <link rel="icon" type="image/x-icon" href="/images/jme.ico">
   <title>About | Jamison Lahman</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
