--- a/template.html
+++ b/template.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="jamison,jamie,lahman">
   <meta name="author" content="Jamison Lahman">
   <link rel="stylesheet" href="/css/stylesheet.minified.css">
+  <link rel="stylesheet" href="/css/kate.css">
   <link rel="icon" type="image/x-icon" href="/images/jme.ico">
 $if(date-meta)$
   <meta name="dcterms.date" content="$date-meta$" />
