icon update and rm unused

--- a/feed/index.html
+++ b/feed/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/css/stylesheet.minified.css">
   <link rel="stylesheet" href="/css/kate.css">
   <link rel="stylesheet" href="/css/kate.css">
-  <link rel="icon" type="image/x-icon" href="/images/jme.ico">
+  <link rel="icon" type="image/png" href="/images/icon.png">
   <title>Feed | Jamison Lahman</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
