--- a/resume/index.html
+++ b/resume/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Jamison Lahman">
   <title>Resume | Jamison Lahman</title>
   <link rel="stylesheet" href="/css/stylesheet.minified.css">
-  <link rel="icon" type="image/x-icon" href="/images/jme.ico">
+  <link rel="icon" type="image/png" href="/images/icon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
