--- a/template.html
+++ b/template.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Jamison Lahman">
   <link rel="stylesheet" href="/css/stylesheet.minified.css">
   <link rel="stylesheet" href="/css/kate.css">
-  <link rel="icon" type="image/x-icon" href="/images/jme.ico">
+  <link rel="icon" type="image/png" href="/images/icon.png">
 $if(date-meta)$
   <meta name="dcterms.date" content="$date-meta$" />
 $endif$
