actually minify css and automate

--- a/feed/index.html
+++ b/feed/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Personal website">
   <meta name="keywords" content="jamison,jamie,lahman">
   <meta name="author" content="Jamison Lahman">
-  <link rel="stylesheet" href="/css/stylesheet.minified.css">
+  <link rel="stylesheet" href="/css/stylesheet.min.css">
   <link rel="stylesheet" href="/css/kate.css">
   <link rel="icon" type="image/png" href="/images/icon.png">
   <title>Feed | Jamison Lahman</title>
