--- a/resume/index.html
+++ b/resume/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="jamison,jamie,lahman">
   <meta name="author" content="Jamison Lahman">
   <title>Resume | Jamison Lahman</title>
-  <link rel="stylesheet" href="/css/stylesheet.minified.css">
+  <link rel="stylesheet" href="/css/stylesheet.min.css">
   <link rel="icon" type="image/png" href="/images/icon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
