--- a/template.html
+++ b/template.html
@@ -45,6 +45,7 @@ $endfor$
     <div class="right">
       <a href="mailto:jamison@lahman.dev" title="Email"><i class="fas fa-envelope"></i></a>
       <a href="https://x.com/jmelahman" title="Twitter"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.strava.com/athletes/jamison_lahman"><i class="fab fa-strava"></i></a>
       <a href="https://github.com/jmelahman" title="GitHub"><i class="fab fa-github"></i></a>
       <a href="https://linkedin.com/in/jamison-lahman" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
       <a href="/rss.xml"><i class="fas fa-rss"></i> RSS</a>
