link styling improvements

--- a/resume/index.html
+++ b/resume/index.html
@@ -64,9 +64,9 @@ color: #2c2c2c;
 </head>
 <body>
 <header id="title-block-header">
-  <nav>
+  <nav class="stateless">
     <a href="/" class title="Return to the home page">About</a>
-    <a href="/resume" title="Jamison&#39;s Resume">Resume</a>
+    <a href="/resume" class="active" title="Jamison&#39;s Resume">Resume</a>
     <a href="/blog" class title="Personal blog">Blog</a>
     <a href="/feed" class title="Reverse blog">Feed</a>
     <div class="right">
