--- a/template.html
+++ b/template.html
@@ -37,7 +37,7 @@ $for(include-before)$
 $include-before$
 $endfor$
 <header id="title-block-header">
-  <nav>
+  <nav class="stateless">
     <a href="/" class="$if(nav_about)$active$endif$" title="Return to the home page">About</a>
     <a href="/resume" title="Jamison's Resume">Resume</a>
     <a href="/blog" class="$if(nav_blog)$active$endif$" title="Personal blog">Blog</a>
