/rss.xml->/rss; sam harris feed to HTTPS

--- a/template.html
+++ b/template.html
@@ -48,7 +48,7 @@ $endfor$
       <a href="https://www.strava.com/athletes/jamison_lahman"><i class="fab fa-strava"></i></a>
       <a href="https://github.com/jmelahman" title="GitHub"><i class="fab fa-github"></i></a>
       <a href="https://linkedin.com/in/jamison-lahman" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-      <a href="/rss.xml"><i class="fas fa-rss"></i> RSS</a>
+      <a href="/rss"><i class="fas fa-rss"></i> RSS</a>
     </div>
   </nav>
 $if(title)$
