convert jpg to webp

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h1 id="jamison-lahman">Jamison Lahman</h1>
 <div class="right-sidebar">
 <figure>
-<img src="/images/psyduck_son.jpg"
+<img src="/images/psyduck_son.webp"
 alt="Psyduck is my favorite Pokémon." />
 <figcaption aria-hidden="true">Psyduck is my favorite
 Pokémon.</figcaption>
