--- a/resume/index.html
+++ b/resume/index.html
@@ -70,12 +70,12 @@ color: #2c2c2c;
     <a href="/blog" class title="Personal blog">Blog</a>
     <a href="/feed" class title="Reverse blog">Feed</a>
     <div class="right">
-      <a alt="Email" href="mailto:jamison@lahman.dev" title="Email"><i class="fas fa-envelope"></i></a>
-      <a alt="Twitter" href="https://x.com/jmelahman" title="Twitter"><i class="fab fa-twitter"></i></a>
-      <a alt="Strava" href="https://www.strava.com/athletes/jamison_lahman"><i class="fab fa-strava"></i></a>
-      <a alt="Github" href="https://github.com/jmelahman" title="GitHub"><i class="fab fa-github"></i></a>
-      <a alt="Linked" href="https://linkedin.com/in/jamison-lahman" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-      <a alt="RSS" href="/rss"><i class="fas fa-rss"></i> RSS</a>
+      <a alt="Email" title="Email" href="mailto:jamison@lahman.dev" title="Email"><i class="fas fa-envelope"></i></a>
+      <a alt="Twitter" title="Twitter" href="https://x.com/jmelahman" title="Twitter"><i class="fab fa-twitter"></i></a>
+      <a alt="Strava" title="Strava" href="https://www.strava.com/athletes/jamison_lahman"><i class="fab fa-strava"></i></a>
+      <a alt="GitHub" title="GitHub" href="https://github.com/jmelahman" title="GitHub"><i class="fab fa-github"></i></a>
+      <a alt="LinkedIn" title="LinkedIn" href="https://linkedin.com/in/jamison-lahman" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+      <a alt="RSS" title="RSS" href="/rss"><i class="fas fa-rss"></i> RSS</a>
     </div>
   </nav>
 </header>
