--- a/404.html
+++ b/404.html
@@ -7,6 +7,13 @@
   <meta name="description" content="Personal website">
   <meta name="keywords" content="jamison,jamie,lahman">
   <meta name="author" content="Jamison Lahman">
+  <meta property="og:title" content="Page not found" />
+  <meta property="og:image" content="https://jamison.lahman.dev/images/icon.png" />
+  <meta property="og:url" content="jamison.lahman.dev" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@jmelahman" />
+  <meta name="twitter:creator" content="@jmelahman" />
   <link rel="stylesheet" href="/css/stylesheet.min.css">
   <link rel="stylesheet" href="/css/kate.css">
   <link rel="icon" type="image/png" href="/images/icon.png">
