--- a/resume/index.html
+++ b/resume/index.html
@@ -14,6 +14,7 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@jmelahman" />
   <meta name="twitter:creator" content="@jmelahman" />
+  <meta name="twitter:image" content="https://jamison.lahman.dev/images/icon.png" />
   <title>Resume | Jamison Lahman</title>
   <link rel="stylesheet" href="/css/stylesheet.min.css">
   <link rel="icon" type="image/png" href="/images/icon.png">
