--- a/404.html
+++ b/404.html
@@ -43,8 +43,10 @@
   </nav>
 </header>
 <hr>
+<main>
 <section id="page-not-found" style="text-align: center">
 <h1>404 - Page Not Found</h1>
 </section>
+</main>
 </body>
 </html>
