--- a/feed/index.html
+++ b/feed/index.html
@@ -44,6 +44,7 @@
   </nav>
 </header>
 <hr>
+<main>
 <body>
   <div id="content">
     <div class="loading">
@@ -51,5 +52,6 @@
     </div>
   </div>
 </body>
+</main>
 </body>
 </html>
