--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   </nav>
 </header>
 <hr>
+<main>
 <h1 id="jamison-lahman">Jamison Lahman</h1>
 <div class="right-sidebar">
 <figure>
@@ -390,5 +391,6 @@ of politicians I’ve never heard of, it’s fairly accurate.</p>
 <li>Yahoo!</li>
 <li>YouTube</li>
 </ul>
+</main>
 </body>
 </html>
