--- a/resume/index.html
+++ b/resume/index.html
@@ -88,6 +88,7 @@ color: #2c2c2c;
   </nav>
 </header>
 <hr>
+<main>
 <h1 id="jamison-lahman-resumé">Jamison Lahman <em>— Resumé</em></h1>
 <p style="text-indent: 0px"><span class="subtitle"> Mountain View, CA 94041 — 650-550-0490 —
 jamison@lahman.dev </span></p>
@@ -179,5 +180,6 @@ Mathematics</strong></td>
 </tr>
 </tbody>
 </table>
+</main>
 </body>
 </html>
