--- a/template.html
+++ b/template.html
@@ -79,6 +79,7 @@ $endif$
 $endif$
 </header>
 <hr>
+<main>
 $if(toc)$
 <nav id="$idprefix$TOC" role="doc-toc">
 $if(toc-title)$
@@ -91,5 +92,6 @@ $body$
 $for(include-after)$
 $include-after$
 $endfor$
+</main>
 </body>
 </html>
