update and move resume to website directory

--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Personal website">
   <meta name="keywords" content="jamison,jamie,lahman">
   <meta name="author" content="Jamison Lahman">
-  <meta property="og:title" content="Resume" />
+  <meta property="og:title" content="Resumé" />
   <meta property="og:image" content="https://jamison.lahman.dev/images/icon.png" />
   <meta property="og:url" content="jamison.lahman.dev" />
   <meta property="og:type" content="website" />
@@ -15,127 +15,95 @@
   <meta name="twitter:site" content="@jmelahman" />
   <meta name="twitter:creator" content="@jmelahman" />
   <meta name="twitter:image" content="https://jamison.lahman.dev/images/icon.png" />
-  <title>Resume | Jamison Lahman</title>
   <link rel="stylesheet" href="/css/stylesheet.min.css">
+  <link rel="stylesheet" href="/css/kate.css">
   <link rel="icon" type="image/png" href="/images/icon.png">
+  <title>Resumé | Jamison Lahman</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap">
-  <style type="text/css">* {
-box-sizing: border-box;
-}
-h2, h3, h4, h5, h6 {
-margin: 0px;
-padding: 0px;
-}
-em {
-opacity: 0.8;
-font-size: 75%;
-font-style: normal;
-font-weight: 400;
-}
-hr {
-margin-bottom: 16px
-}
-td {
-vertical-align: top;
-}
-tr:nth-child(even) {
-position: relative;
-top: -10px;
-}
-li {
-margin-bottom: 8px;
-}
-.subtitle {
-font-size: 80%;
-margin-bottom: 8px;
-position: relative;
-top: -12px;
-}
-#objective {
-margin-top: 32px;
-}
-</style>
-  <style type="text/css">html {
-color: #202020;
-background-color: #fbfaef;
-}
-h1, h2, h3, h4, h5, h6, hr {
-color: #8c0000;
-}
-em {
-color: #2c2c2c;
-}
-</style>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap">
 </head>
 <body>
 <header id="title-block-header">
   <nav class="stateless">
-    <a href="/" class title="Return to the home page">About</a>
-    <a href="/resume" class="active" title="Jamison&#39;s Resume">Resume</a>
-    <a href="/blog" class title="Personal blog">Blog</a>
-    <a href="/feed" class title="Reverse blog">Feed</a>
+    <a href="/" class="" title="Return to the home page">About</a>
+    <a href="/resume" class="active" title="Jamison's Resume">Resume</a>
+    <a href="/blog" class="" title="Personal blog">Blog</a>
+    <a href="/feed" class="" title="Reverse blog">Feed</a>
     <div class="right">
-      <a alt="Email" title="Email" href="mailto:jamison@lahman.dev" title="Email"><i class="fas fa-envelope"></i></a>
-      <a alt="Twitter" title="Twitter" href="https://x.com/jmelahman" title="Twitter"><i class="fab fa-twitter"></i></a>
+      <a alt="Email" title="Email" href="mailto:jamison@lahman.dev"><i class="fas fa-envelope"></i></a>
+      <a alt="Twitter" title="Twitter" href="https://x.com/jmelahman"><i class="fab fa-twitter"></i></a>
       <a alt="Strava" title="Strava" href="https://www.strava.com/athletes/jamison_lahman"><i class="fab fa-strava"></i></a>
-      <a alt="GitHub" title="GitHub" href="https://github.com/jmelahman" title="GitHub"><i class="fab fa-github"></i></a>
-      <a alt="LinkedIn" title="LinkedIn" href="https://linkedin.com/in/jamison-lahman" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+      <a alt="GitHub" title="GitHub" href="https://github.com/jmelahman"><i class="fab fa-github"></i></a>
+      <a alt="LinkedIn" title="LinkedIn" href="https://linkedin.com/in/jamison-lahman"><i class="fab fa-linkedin"></i></a>
       <a alt="RSS" title="RSS" href="/rss"><i class="fas fa-rss"></i> RSS</a>
     </div>
   </nav>
 </header>
 <hr>
 <main>
+<section class="resume">
 <h1 id="jamison-lahman-resumé">Jamison Lahman <em>— Resumé</em></h1>
-<p style="text-indent: 0px"><span class="subtitle"> Mountain View, CA 94041 — 650-550-0490 —
-jamison@lahman.dev </span></p>
+<p class="subtitle">
+Mountain View, CA 94041 — <i class="fa-solid fa-phone"></i> 650-550-0490
+—
+<a alt="Email" title="Email" href="mailto:jamison@lahman.dev"><i class="fas fa-envelope"></i>
+jamison@lahman.dev</a> —
+<a alt="GitHub" title="GitHub" href="https://github.com/jmelahman"><i class="fab fa-github"></i>
+JmeLahman</a>
+</p>
 <h2 id="summary">Summary</h2>
-<hr />
+<hr/>
 <p>Software Engineer with 8+ years of experience as a generalist across
 platform, backend, frontend, DevOps, and tooling. Spent 6 years at a
 high-growth startup, owning critical infrastructure through scale. Deep
 expertise in Python including major migrations (Python 2→3,
-cross-platform support, Cython). Recently focused on Go for developer
-experience optimizations and managing a large monorepo codebase. Led
-CI/CD infrastructure from bare-metal to hybrid cloud with auto-scaling.
-Experienced with Git, Bazel, Docker, Kubernetes, Ansible, and Terraform.
-Values simplicity, reliability, and efficiency.</p>
+cross-platform support, Cython). Maintained hybrid bare-metal and cloud
+auto-scaling CI/CD infrastructure. Recently focused on Go for developer
+tooling.</p>
+<p>Experienced with: Git, Docker, Bazel, Buildkite, AWS, Ansible,
+Terraform, Github Actions, and Kubernetes.</p>
 <h2 id="experience">Experience</h2>
-<hr />
+<hr/>
 <table>
 <colgroup>
-<col style="width: 85%" />
-<col style="width: 14%" />
+<col style="width: 78%" />
+<col style="width: 21%" />
 </colgroup>
 <tbody>
 <tr>
 <td><strong>Software Engineer - Platform</strong> <em>— Applied
 Intuition, Inc., Mountain View, CA</em></td>
-<td>Nov 2020 - Present</td>
+<td>Nov 2020 - Apr 2025</td>
 </tr>
-<tr>
-<td><ul>
-<li>Re-architected a monolithic application into microservices, owning
-shared services (e.g., configuration, DB interfaces); reduced feature
-lead times by weeks and reduced deployment time by hours.</li>
+</tbody>
+</table>
+<ul>
+<li>Re-architected packaging and releasing of microservices as part of a
+migration from a monolithic application, reducing feature lead times by
+weeks and deployment times by hours.</li>
 <li>Introduced ephemeral, auto-scaling cloud infrastructure, cutting
 costs by 80%, eliminating p99 wait times in CI, and supporting 10×
 operational growth over 3 years.</li>
 <li>Led internal DevTools efforts (static typing, linting, formatting,
-code coverage), reducing production failures by ~30%.</li>
-</ul></td>
-<td></td>
-</tr>
+code coverage), reducing production failures by an estimated 30%.</li>
+</ul>
+<table>
+<colgroup>
+<col style="width: 78%" />
+<col style="width: 21%" />
+</colgroup>
+<tbody>
 <tr>
 <td><strong>Quality Assurance Engineer</strong> <em>— Applied Intuition,
 Inc., Mountain View, CA</em></td>
-<td>April 2019 - Nov 2020</td>
+<td>Apr 2019 - Nov 2020</td>
 </tr>
-<tr>
-<td><ul>
+</tbody>
+</table>
+<ul>
 <li>Migrated from Selenium to Playwright, reducing end-to-end test
 runtimes by 60% and false positives by 20% while maintaining
 coverage.</li>
@@ -145,41 +113,43 @@ reducing CI p50 time by 20 minutes and reducing total compute cost by
 <li>Owned CI/CD infrastructure including on-prem and cloud (Azure, AWS
 EC2) servers, test selection and orchestration, build health, and data
 pipelines.</li>
-</ul></td>
-<td></td>
-</tr>
+</ul>
+<table>
+<colgroup>
+<col style="width: 77%" />
+<col style="width: 22%" />
+</colgroup>
+<tbody>
 <tr>
 <td><strong>Software Quality Operations</strong> <em>— Waymo LLC,
 Mountain View, CA</em></td>
-<td>June 2017 - April 2019</td>
+<td>June 2017 - Apr 2019</td>
 </tr>
-<tr>
-<td><ul>
+</tbody>
+</table>
+<ul>
 <li>Investigated simulator crashes and test failures as first-pass
 triage.</li>
 <li>Created custom Google Sheets integrations with Apps Script and
 Dremel SQL, saving a day of manual effort per week.</li>
-</ul></td>
-<td></td>
-</tr>
-</tbody>
-</table>
+</ul>
 <h2 id="education">Education</h2>
-<hr />
+<hr/>
 <table>
 <colgroup>
-<col style="width: 85%" />
-<col style="width: 14%" />
+<col style="width: 78%" />
+<col style="width: 21%" />
 </colgroup>
 <tbody>
 <tr>
 <td><strong>Bachelor of Science in Applied Physics</strong> <em>— Ohio
 University, Athens, OH</em> <br> <strong>Minor in
 Mathematics</strong></td>
-<td>Aug 2014 - April 2017</td>
+<td>Aug 2014 - Apr 2017</td>
 </tr>
 </tbody>
 </table>
+</section>
 </main>
 </body>
 </html>
