fix resume html

--- a/resume/index.html
+++ b/resume/index.html
@@ -60,7 +60,8 @@ JmeLahman</a>
 platform, backend, frontend, DevOps, and tooling. Spent 6 years at a
 high-growth startup, owning critical infrastructure through scale. Deep
 expertise in Python including major migrations (Python 2→3,
-cross-platform support, Cython). Maintained hybrid bare-metal and cloud
+cross-platform support, Cython). Led developer operations across a
+large, multi-language monorepo. Maintained hybrid bare-metal and cloud
 auto-scaling CI/CD infrastructure. Recently focused on Go for developer
 tooling.</p>
 <p>Experienced with: Git, Docker, Bazel, Buildkite, AWS, Ansible,
@@ -69,14 +70,14 @@ Terraform, Github Actions, and Kubernetes.</p>
 <hr/>
 <table>
 <colgroup>
-<col style="width: 78%" />
-<col style="width: 21%" />
+<col style="width: 77%" />
+<col style="width: 22%" />
 </colgroup>
 <tbody>
 <tr>
 <td><strong>Software Engineer - Platform</strong> <em>— Applied
 Intuition, Inc., Mountain View, CA</em></td>
-<td>Nov 2020 - Apr 2025</td>
+<td>Nov 2020 - July 2025</td>
 </tr>
 </tbody>
 </table>
