--- a/marquee.html
+++ b/marquee.html
@@ -18,14 +18,14 @@
   <link rel="stylesheet" href="/css/stylesheet.min.css">
   <link rel="stylesheet" href="/css/kate.css">
   <link rel="icon" type="image/png" href="/images/icon.png">
-  <title>🚀💥 HYPE LEVEL OVER 9000! 💥🚀</title>
+  <title>🚀 Shoot the Moon! 🔥</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap">
     <script>
-      const title = "🚀 Shoot the Moon! 🔥";
+      const title = "🚀 Shoot the Moon! 🔥 ";
       const chars = Array.from(title); // splits correctly by emoji/codepoints
       let i = 0;
 
